--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-body {
+body, html {
   height: 100%;
 }
 
@@ -14,19 +14,24 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  padding-top: 48px;
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 80px;
+  }
 }
 .header__logo {
-  margin-bottom: 50px;
-}
-@media screen and (min-width: 420px) {
-  .header__logo {
-    margin-bottom: 0;
-  }
+  margin-bottom: 54px;
 }
 @media screen and (min-width: 600px) {
   .header__logo {
-    margin-bottom: 50px;
+    margin-bottom: 64px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-bottom: 0;
   }
 }
 .header__image-wrapper {
@@ -36,7 +41,6 @@ body {
   background-size: contain;
   width: 110%;
   min-height: 175px;
-  margin-bottom: 50px;
 }
 @media screen and (min-width: 420px) {
   .header__image-wrapper {
@@ -47,7 +51,6 @@ body {
 @media screen and (min-width: 600px) {
   .header__image-wrapper {
     min-height: 303px;
-    margin-bottom: 50px;
   }
 }
 @media screen and (min-width: 850px) {
@@ -83,7 +86,12 @@ body {
   align-items: center;
 }
 .page__hero {
-  padding-bottom: 50px;
+  padding: 48px 0;
+}
+@media screen and (min-width: 600px) {
+  .page__hero {
+    padding: 72px 0 80px 0;
+  }
 }
 @media screen and (min-width: 1200px) {
   .page__hero {
@@ -91,6 +99,7 @@ body {
     flex-direction: row;
     width: 100%;
     justify-content: space-around;
+    padding: 61px 0 110px 0;
   }
 }
 .page__hero-text {
@@ -118,7 +127,7 @@ body {
   .page__title {
     font-size: 48px;
     line-height: 48px;
-    max-width: 330px;
+    max-width: 370px;
     min-height: 100px;
   }
 }
@@ -130,14 +139,14 @@ body {
     font-weight: 900;
     margin: 0;
     overflow: hidden;
-    max-width: 380px;
-    min-height: 200px;
+    max-width: 470px;
+    min-height: unset;
     margin-bottom: 24px;
   }
 }
 @media screen and (min-width: 1200px) {
   .page__title {
-    min-height: 200px;
+    margin-bottom: 34px;
   }
 }
 .page__content {
@@ -153,11 +162,6 @@ body {
 @media screen and (min-width: 600px) {
   .page__content {
     max-width: 450px;
-  }
-}
-@media screen and (min-width: 850px) {
-  .page__content {
-    font-size: 20px;
   }
 }
 .page__button-wrapper {
@@ -208,6 +212,11 @@ body {
     width: -webkit-fill-available;
   }
 }
+@media screen and (min-width: 1200px) {
+  .page__button-primary {
+    width: unset;
+  }
+}
 .page__button-version-primary {
   color: #8fe3f9;
 }
@@ -243,6 +252,11 @@ body {
     width: -webkit-fill-available;
   }
 }
+@media screen and (min-width: 1200px) {
+  .page__button-secondary {
+    width: unset;
+  }
+}
 .page__separator {
   font-size: 16px;
   line-height: 26px;
@@ -260,8 +274,7 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 134px;
-  margin-bottom: 65px;
+  margin-top: 82px;
   overflow: unset;
 }
 .page__separator::before {
@@ -278,18 +291,18 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 24px;
-  margin-bottom: 65px;
-}
-@media screen and (max-width: 378px) {
-  .page__meetings-images {
-    padding: 0 24px;
-  }
+  padding: 64px 24px;
 }
 @media screen and (min-width: 600px) {
   .page__meetings-images {
     display: flex;
     justify-content: center;
-    padding: 0 40px;
+    padding: 64px 40px 48px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page__meetings-images {
+    padding: 64px 60px 80px;
   }
 }
 .page__meetings-image {
@@ -314,17 +327,7 @@ body {
   margin: 0;
   overflow: hidden;
   text-align: center;
-  margin-bottom: 24px;
-}
-@media screen and (min-width: 850px) {
-  .page__meetings-overline {
-    font-size: 18px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .page__meetings-overline {
-    font-size: 16px;
-  }
+  margin-bottom: 16px;
 }
 .page__meetings-title {
   font-size: 32px;
@@ -346,17 +349,7 @@ body {
     margin: 0;
     overflow: hidden;
     max-width: 445px;
-    margin-bottom: 45px;
-  }
-}
-@media screen and (min-width: 850px) {
-  .page__meetings-title {
-    font-size: 44px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .page__meetings-title {
-    font-size: 40px;
+    margin-bottom: 32px;
   }
 }
 .page__meetings-content {
@@ -374,15 +367,10 @@ body {
     max-width: 573px;
   }
 }
-@media screen and (min-width: 850px) {
-  .page__meetings-content {
-    font-size: 18px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .page__meetings-content {
-    max-width: 540px;
-    font-size: 16px;
+    max-width: 520px;
+    font-size: 18px;
   }
 }
 
@@ -393,6 +381,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 64px;
+}
+@media screen and (min-width: 600px) {
+  .footer {
+    margin-top: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    margin-top: 69px;
+  }
 }
 .footer__wrapper {
   background-image: url(assets/mobile/image-footer.jpg);
@@ -408,18 +407,20 @@ body {
 }
 @media screen and (min-width: 600px) {
   .footer__wrapper {
-    background-image: url(assets/desktop/image-footer.jpg);
+    background-image: url(assets/tablet/image-footer.jpg);
     background-position: unset;
     width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__wrapper {
+    background-image: url(assets/desktop/image-footer.jpg);
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 0 40px;
     min-height: 300px;
     background-position: center;
+    min-height: 308px;
   }
 }
 .footer__wrapper::before {
@@ -453,15 +454,13 @@ body {
     text-align: center;
     margin: 0;
     overflow: hidden;
-    margin-bottom: 45px;
+    margin-bottom: 32px;
     max-width: 457px;
     color: #fafafa;
-    margin-top: 15px;
   }
 }
 @media screen and (min-width: 850px) {
   .footer__title {
-    font-size: 44px;
     min-height: 100px;
     margin-bottom: 30px;
   }
@@ -470,7 +469,6 @@ body {
   .footer__title {
     text-align: left;
     max-width: 350px;
-    font-size: 40px;
   }
 }
 .footer__content {
@@ -481,14 +479,20 @@ body {
   text-align: center;
   margin: 0;
   overflow: hidden;
+  font-size: 18px;
   color: #fafafa;
   padding: 0 30px;
   margin-bottom: 32px;
 }
 @media screen and (min-width: 600px) {
   .footer__content {
-    max-width: 350px;
-    font-size: 18px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__content {
+    text-align: left;
+    max-width: 410px;
   }
 }
 .footer__button-secondary {
@@ -506,6 +510,7 @@ body {
   color: #fafafa;
   cursor: pointer;
   width: fit-content;
+  margin-bottom: 0;
   background-color: #855fb1;
   white-space: nowrap;
 }
@@ -517,15 +522,21 @@ body {
 .footer__button-secondary:hover {
   background-color: #b18bdd;
 }
+@media screen and (max-width: 1200px) {
+  .footer__button-secondary {
+    margin-bottom: 0;
+  }
+}
 .footer__button-version-secondary {
   color: #d9b8ff;
 }
 
 .-footer {
   position: absolute;
-  top: -45px;
+  top: 88px;
   background-color: #fafafa;
   z-index: 1;
+  margin: 0;
 }
 
 @media screen and (min-width: 1200px) {
